Relaxed MCP server filter